# CameraWall

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
LICENSES/: LICENSE.txt
lang/: en.json  hu.json
src/: camerawall.cpp  camerawall.h  editcameradialog.cpp  editcameradialog.h  language.cpp  language.h  main.cpp  onvifclient.cpp  onvifclient.h  reorderdialog.cpp  reorderdialog.h  util.cpp  util.h  videotile.cpp  videotile.h
